# weary-traveler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yaml
documentation/: software-design-document.md
poe_trade_fetch/: Awakened_Multistrike_Support.csv  Awakened_Spell_Echo_Support.csv  WearyTraveler.py  data_crunch.ipynb  data_crunch.py  main.py  poe_ninja_data.csv  poe_ninja_scraper.py  poe_trade_data.csv  poe_trade_rest.py  scraper.py  test.py
poe_trade_fetch/.ipynb_checkpoints/: A_w_a_k_e_n_e_d_ _M_u_l_t_i_s_t_r_i_k_e_ _S_u_p_p_o_r_t-checkpoint.csv  Awakened_Spell_Echo_Support-checkpoint.csv
tests/: test_DataHandler.py  test_ProfitStrat.py
weary_traveler/: main.py  poe_trade_rest.py
