[tool.poetry]
name = "poe-trade-fetch"
version = "0.1.0"
description = ""
authors = ["Ramonnn <29675067+Ramonnn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.2"
selenium = "^4.17.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
